removed no-wrap of heading and fixed spacing

--- a/frontend/website-client/src/assets/styles/page.scss
+++ b/frontend/website-client/src/assets/styles/page.scss
@@ -43,6 +43,10 @@
   display: flex;
 }
 
+.col-shrink-to-fit {
+  flex-grow: 0;
+}
+
 .md-content-right {
   
   @include media-breakpoint-up(md) {
