--- a/frontend/website-client/src/components/shelves/shelves.scss
+++ b/frontend/website-client/src/components/shelves/shelves.scss
@@ -40,14 +40,18 @@ $shelf-padding-extra: 2em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
 
-  h1 + p,
-  h2 + p {
+  h1 + div > p,
+  h2 + div > p {
     margin-top: 0.5em;
     margin-bottom: 1em;
   }
-
-  p:last-child {
+  
+  div > p:last-child {
     margin-bottom: 0;
+  }
+  
+  div + a.button-cta {
+    margin-top: 1em;
   }
 }
 
